--- a/src/scss/sections/_block-cases-slider.scss
+++ b/src/scss/sections/_block-cases-slider.scss
@@ -85,6 +85,7 @@
       line-height: 1;
       color: $primary;
       margin: -3px 0 22px;
+      font-weight: 350;
 
       em {
         font-style: normal;
