--- a/src/scss/sections/_block-cta.scss
+++ b/src/scss/sections/_block-cta.scss
@@ -9,7 +9,7 @@
 
   p {
     margin: 0 0 60px 0;
-    font-weight: 500;
+    font-weight: 350;
   }
 
   .btn {
@@ -20,6 +20,26 @@
     padding-bottom: 35px;
   }
 
+  &--type2 {
+    padding: 40px 0;
+    line-height: 1.4;
+    p {
+      font-size: 1.25rem;
+      margin: 0 0 55px;
+    }
+  }
+
+  @include media-breakpoint-up(md) {
+    &--type2 {
+      .row {
+        align-items: center;
+      }
+      p {
+        margin: 0;
+      }
+    }
+  }
+
   @include media-breakpoint-up(xl) {
     padding: 122px 0 73px;
 
@@ -28,7 +48,6 @@
     }
 
     p {
-      font-weight: 400;
       font-size: 18px;
       letter-spacing: 0.01em;
       margin: 0;
@@ -44,6 +63,13 @@
       }
       .btn {
         margin: 0;
+      }
+    }
+
+    &--type2 {
+      padding: 65px 0 83px;
+      p {
+        font-size: 21px;
       }
     }
   }
@@ -70,6 +96,13 @@
     &--narrow {
       h3 {
         margin: 0 0 17px;
+      }
+    }
+
+    &--type2 {
+      padding: 70px 0 60px;
+      p {
+        font-size: 26px;
       }
     }
   }
