--- a/src/scss/sections/_block-slider-content.scss
+++ b/src/scss/sections/_block-slider-content.scss
@@ -32,6 +32,7 @@
           display: block;
           margin: 10px 0 0;
           font-size: 0.89em;
+          font-weight: 500;
         }
       }
     }
