--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -47,7 +47,9 @@
     .site-logo {
       svg {
         path {
-          fill: $primary;
+          &:not(.logo-vector) {
+            fill: $white;
+          }
         }
       }
     }
