--- a/src/scss/sections/sections.scss
+++ b/src/scss/sections/sections.scss
@@ -23,6 +23,7 @@
 @import "block-slider-images";
 @import "block-text";
 @import "block-share";
+@import "block-careers-share";
 
 // blog
 @import "block-featured-article";
