--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -18,3 +18,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "acid_grotesk";
+  src: url("../fonts/acid-grotesk-light.woff2") format("woff2"), url("../fonts/acid-grotesk-light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "acid_grotesk";
+  src: url("../fonts/acid-grotesk-normal.woff2") format("woff2"), url("../fonts/acid-grotesk-normal.woff") format("woff");
+  font-weight: 350;
+  font-style: normal;
+}
