--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -19,6 +19,9 @@ body {
 
 .content {
   position: relative;
+  background-color: $white;
+  z-index: 9;
+  padding: 0 0 0.01px;
 
   .container-fluid {
     max-width: $max-content;
