--- a/src/scss/base/_typo.scss
+++ b/src/scss/base/_typo.scss
@@ -41,13 +41,14 @@ body {
 
 h1 {
   font-size: clamp($h1-font-size-sm, get-vw($h1-font-size), $h1-font-size);
-  font-weight: 400;
+  font-weight: 350;
   letter-spacing: -0.01em;
   line-height: 0.85;
   text-transform: uppercase;
 
   @include media-breakpoint-up(lg) {
     line-height: 0.85;
+    font-weight: 300;
   }
 }
 
@@ -84,6 +85,19 @@ h4 {
 
   @include media-breakpoint-up(lg) {
     line-height: 1.05;
+  }
+}
+
+h5 {
+  font-size: $h5-font-size-sm;
+  letter-spacing: 0.01em;
+  font-weight: 700;
+  line-height: 1.22;
+  margin: 0;
+
+  @include media-breakpoint-up(lg) {
+    font-size: $h5-font-size;
+    margin: 0 0 11px;
   }
 }
 
