--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -118,13 +118,37 @@ button {
     width: 100%;
   }
 
-  @include media-breakpoint-between(xl, xxl) {
-    height: 34px;
-    font-size: 14px;
-    padding: 0 0.8rem;
+  @include media-breakpoint-up(xl) {
+    height: 74px;
+  }
+}
+
+#copyUrl {
+  position: relative;
+  overflow: visible;
+
+  &:before {
+    content: "Page url copied";
+    position: absolute;
+    left: 50%;
+    top: 0;
+    background-color: $secondary;
+    color: $white;
+    line-height: 24px;
+    padding: 0 15px;
+    border-radius: 10px;
+    text-transform: none;
+    font-weight: 400;
+    letter-spacing: 0;
+    transform: translate3d(-50%, -20px, 0);
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
   }
 
-  @include media-breakpoint-up(xxl) {
-    height: 74px;
+  &.copied {
+    &:before {
+      transform: translate3d(-50%, -30px, 0);
+      opacity: 1;
+    }
   }
 }
