--- a/src/scss/sections/_block-banner-article.scss
+++ b/src/scss/sections/_block-banner-article.scss
@@ -28,6 +28,7 @@
       margin: 24px 0 60px;
       @include font-size(2.875rem, $h3-font-size);
       line-height: 0.97;
+      font-weight: 300;
 
       a {
         text-decoration: none;
