--- a/src/scss/sections/_block-blog-article.scss
+++ b/src/scss/sections/_block-blog-article.scss
@@ -70,6 +70,7 @@
       @include font-size(2.25rem, $h4-font-size);
       line-height: 0.98;
       margin: 57px 0 51px;
+      font-weight: 400;
 
       &:first-child {
         margin-top: 32px;
