--- a/src/scss/sections/_block-contact-form.scss
+++ b/src/scss/sections/_block-contact-form.scss
@@ -67,6 +67,7 @@
 
     .form-check {
       margin-top: 10px;
+      padding-left: 1.35rem;
     }
 
     .form-buttons {
@@ -131,6 +132,14 @@
       .form-label {
         font-size: 0.75rem;
         text-transform: uppercase;
+      }
+    }
+  }
+
+  @include media-breakpoint-up(xl) {
+    form {
+      .form-check {
+        padding-left: 1.25rem;
       }
     }
   }
