--- a/src/scss/sections/_block-featured-article.scss
+++ b/src/scss/sections/_block-featured-article.scss
@@ -30,6 +30,7 @@
       margin: 24px 0 53px;
       @include font-size(2.875rem, $h3-font-size);
       line-height: 0.97;
+      font-weight: 300;
 
       a {
         text-decoration: none;
@@ -43,6 +44,7 @@
     .btn-wrap {
       .btn {
         width: auto;
+        font-weight: 400;
       }
     }
   }
