--- a/src/scss/sections/_block-home-parallax.scss
+++ b/src/scss/sections/_block-home-parallax.scss
@@ -11,6 +11,10 @@
     background-color: rgba($black, 0.6);
   }
 
+  &.is-hidden {
+    display: none;
+  }
+
   .parallax-wrapper {
     width: 100vw;
     height: 100vh;
