--- a/src/scss/sections/_block-slider-variable-width.scss
+++ b/src/scss/sections/_block-slider-variable-width.scss
@@ -1,4 +1,6 @@
 .block-slider-variable-width {
+  padding: 32px 0 0;
+
   .swiper {
     margin: 0 -65.64%;
 
@@ -38,6 +40,8 @@
   }
 
   @include media-breakpoint-between(xl, xxl) {
+    padding: 114px 0 0;
+
     .swiper {
       .swiper-slide {
         .image {
@@ -45,5 +49,9 @@
         }
       }
     }
+  }
+
+  @include media-breakpoint-up(xxl) {
+    padding: 123px 0 0;
   }
 }
