--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -1,5 +1,9 @@
 .footer {
-  position: relative;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
   overflow: hidden;
   font-size: 0.875rem;
   line-height: 1.48;
