--- a/src/scss/sections/_page-header-case.scss
+++ b/src/scss/sections/_page-header-case.scss
@@ -50,6 +50,7 @@
       text-transform: uppercase;
       color: $primary;
       text-decoration: none;
+      font-weight: 500;
 
       &:after {
         content: "";
