--- a/src/scss/sections/_page-header.scss
+++ b/src/scss/sections/_page-header.scss
@@ -106,101 +106,57 @@
 }
 
 .page-header-career {
-  padding: 70px 0 0;
+  padding: 136px 0 36px;
 
-  .page-header-top {
-    background: linear-gradient(0deg, $primary 20.42%, rgba($primary, 0) 36.87%);
-    padding: 86px 0 24px;
+  h2 {
+    text-transform: uppercase;
+    margin: 0 0 19px;
+    font-weight: 300;
+  }
+
+  p {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.11;
+    margin: 0;
+  }
+
+  .tags {
+    margin: 31px 0 0;
+  }
+
+  @include media-breakpoint-up(xl) {
+    padding: 192px 0 50px;
 
     h2 {
-      text-transform: uppercase;
       margin: 0;
+      line-height: 0.88;
+    }
+
+    p {
+      margin-left: 30px;
+      font-size: 21px;
+      font-weight: 400;
+      line-height: 1.3;
+      letter-spacing: 0.01em;
     }
 
     .tags {
-      margin: 55px 0 0;
-    }
-  }
-
-  .page-header-bottom {
-    background-color: $primary;
-    padding: 30px 0 43px;
-  }
-
-  @include media-breakpoint-up(lg) {
-    .page-header-top {
-      background: linear-gradient(0deg, #e5ff00 0%, rgba(229, 255, 0, 0) 51.43%);
-      padding-bottom: 60px;
-      h1,
-      h2,
-      p {
-        margin: 0;
-      }
-    }
-    .page-header-bottom {
-      background-color: transparent;
-    }
-
-    .tags {
-      span,
-      a {
-        border-color: $primary;
-        background-color: $primary;
-        color: $secondary;
-      }
-    }
-  }
-
-  @include media-breakpoint-between(lg, xxl) {
-    .page-header-top {
-      padding: 111px 0 55px;
-
-      .col-lg-8 {
-        padding-left: 0;
-      }
-      h2 {
-        font-size: 48px;
-        line-height: 0.9;
-      }
-      p {
-        font-size: 21px;
-        line-height: 1.4;
-        letter-spacing: 0.01em;
-        margin: 0 0 5px;
-      }
-    }
-
-    .page-header-bottom {
-      padding: 40px 0 43px;
+      margin: 17px 0 0;
     }
   }
 
   @include media-breakpoint-up(xxl) {
-    padding: 0;
+    padding: 233px 0 60px;
 
-    .page-header-top {
-      padding: 204px 0 93px;
-
-      h2 {
-        line-height: 0.8;
-      }
-
-      p {
-        letter-spacing: 0.01em;
-        margin-left: -68px;
-
-        br {
-          display: none;
-        }
-      }
-
-      .tags {
-        margin: 22px 0 0;
-      }
+    p {
+      margin-top: 68px;
+      margin-left: -65px;
+      font-size: 34px;
     }
 
-    .page-header-bottom {
-      padding: 68px 0 0;
+    .tags {
+      margin: 44px 0 0;
     }
   }
 }
