--- a/src/scss/vars/_overrides.scss
+++ b/src/scss/vars/_overrides.scss
@@ -33,11 +33,13 @@ $h1-font-size: 11.0625rem;
 $h2-font-size: 6.875rem;
 $h3-font-size: 4.25rem;
 $h4-font-size: 2.625rem;
+$h5-font-size: 1.125rem;
 
 $h1-font-size-sm: 4.125rem;
 $h2-font-size-sm: 2.75rem;
 $h3-font-size-sm: 2.25rem;
 $h4-font-size-sm: 1.25rem;
+$h5-font-size-sm: 1.25rem;
 
 $max-content: 1920px;
 $grid-gutter-width: 3rem;
