--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -41,6 +41,16 @@
         }
       }
     }
+
+    &.theme-light-half {
+      .site-logo {
+        svg {
+          path {
+            fill: $secondary;
+          }
+        }
+      }
+    }
   }
 
   &.theme-light-home {
