--- a/src/scss/sections/_block-logos.scss
+++ b/src/scss/sections/_block-logos.scss
@@ -30,10 +30,21 @@
       justify-content: space-around;
 
       li {
-        padding: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        height: 70px;
+        overflow: hidden;
+
+        .logo-inner {
+          transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        span {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 70px;
+          padding: 0 16px;
+          flex: 0 0 auto;
+        }
 
         img {
           display: block;
@@ -45,24 +56,6 @@
   &--text {
     padding: 59px 0 63px;
   }
-
-  // .logos-slider {
-  //   .swiper-wrapper {
-  //     transition-timing-function: linear;
-  //   }
-
-  //   .swiper-slide {
-  //     width: fit-content;
-  //     height: auto;
-  //     display: flex;
-  //     align-items: center;
-  //     justify-content: center;
-
-  //     img {
-  //       display: block;
-  //     }
-  //   }
-  // }
 
   @include media-breakpoint-up(md) {
     .logos-list {
