--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -8,9 +8,8 @@
   display: flex;
   flex-direction: column;
   background-color: $primary;
-  border-radius: 5px;
-  transform: scale(0);
-  transform-origin: right top;
+  transform: scaleY(0);
+  transform-origin: center top;
   transition: transform 0.3s ease;
   padding: 66px 24px 24px;
 
@@ -36,7 +35,7 @@
     height: 100%;
     flex: 1 1 100%;
     padding: 10.2vh 0;
-    max-height: 50vh;
+    max-height: 54vh;
 
     li {
       opacity: 0;
@@ -55,7 +54,7 @@
   }
 
   &.active {
-    transform: scale(1);
+    transform: scaleY(1);
 
     ul {
       li {
@@ -78,6 +77,8 @@
   }
 
   @include media-breakpoint-down(lg) {
+    font-weight: 300;
+
     .btn {
       --bs-btn-color: #{$primary};
       --bs-btn-bg: #{$secondary};
@@ -101,7 +102,7 @@
     max-height: none;
     min-height: 0;
     transform: none;
-    transition: none;
+    transition: background 0.5s;
     padding: 0.5rem 1rem;
     overflow: visible;
     flex-direction: row;
@@ -140,6 +141,7 @@
           text-transform: capitalize;
           opacity: 0.4;
           white-space: nowrap;
+          transition-duration: 0.5s;
 
           &:hover {
             opacity: 1;
