--- a/src/scss/components/_navbar-toggler.scss
+++ b/src/scss/components/_navbar-toggler.scss
@@ -6,9 +6,7 @@
   height: 36px;
   border: none;
   padding: 0;
-  border-radius: 5px;
-  background: rgba(116, 116, 116, 0.16);
-  backdrop-filter: blur(28px);
+  background: none;
 
   .navbar-toggler-icon {
     display: block;
@@ -25,7 +23,7 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background-color: $primary;
+      background-color: $black;
       transition: all 0.2s;
     }
 
@@ -59,5 +57,25 @@
 
   @include media-breakpoint-up(lg) {
     display: none;
+  }
+}
+
+.theme-light {
+  .navbar-toggler {
+    .navbar-toggler-icon {
+      &:before,
+      &:after {
+        background-color: $primary;
+      }
+    }
+
+    &.active {
+      .navbar-toggler-icon {
+        &:before,
+        &:after {
+          background-color: $secondary;
+        }
+      }
+    }
   }
 }
