--- a/src/scss/sections/_block-cases-slider.scss
+++ b/src/scss/sections/_block-cases-slider.scss
@@ -1,4 +1,6 @@
 .block-cases-slider {
+  position: relative;
+
   .swiper-controls {
     display: none;
     position: relative;
@@ -22,9 +24,13 @@
         opacity: 0.5;
         transition: all 0.3s;
 
-        &.active {
+        &:hover {
           color: $primary;
           opacity: 1;
+        }
+
+        a {
+          text-decoration: none;
         }
       }
     }
@@ -66,40 +72,52 @@
     }
   }
 
-  .swiper-slide {
-    height: 100vh;
-    max-height: 747px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  .swiper-wrapper {
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
   }
 
-  .item {
-    padding: 0 24px 40px;
+  .swiper-outer {
+    height: 100vh;
+    max-height: 747px;
 
-    h2 {
-      @include font-size(2.75rem, 4.25rem);
-      line-height: 1;
-      color: $primary;
-      margin: -3px 0 22px;
-      letter-spacing: -0.01em;
-      font-weight: 300;
-
-      em {
-        font-style: normal;
-        display: block;
-        color: $white;
-        margin: 0 0 -5px;
-      }
+    .swiper-slide {
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
 
+    .item {
+      padding: 63px 24px 0;
+      height: 100%;
+
+      h2 {
+        @include font-size(2.75rem, 4.25rem);
+        line-height: 1;
+        color: $primary;
+        margin: -3px 0 22px;
+        letter-spacing: -0.01em;
+        font-weight: 300;
+
+        em {
+          font-style: normal;
+          display: block;
+          color: $white;
+          margin: 0 0 -5px;
+        }
+      }
+    }
+  }
+
+  .swiper-inner {
+    @include abs-center;
+    transform: translate3d(-50%, -38%, 0);
+    width: 243px;
+    height: 432px;
+    border-radius: 16px;
+
     figure {
-      width: 243px;
-      height: 432px;
-      margin: auto;
+      width: 100%;
+      height: 100%;
 
       img {
         @include img-fit;
