--- a/src/scss/sections/_block-logos.scss
+++ b/src/scss/sections/_block-logos.scss
@@ -31,7 +31,7 @@
 
       li {
         height: 70px;
-        overflow: hidden;
+        // overflow: hidden;
 
         .logo-inner {
           transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
@@ -53,10 +53,6 @@
     }
   }
 
-  &--text {
-    padding: 59px 0 63px;
-  }
-
   @include media-breakpoint-up(md) {
     .logos-list {
       ul {
@@ -67,21 +63,6 @@
         li {
           padding: 0;
           margin: 0 0 32px;
-        }
-      }
-    }
-
-    &--text {
-      .logos-list {
-        ul {
-          flex-wrap: wrap;
-          margin: 0;
-          justify-content: center;
-
-          li {
-            padding: 0 30px;
-            margin: 0 0 32px;
-          }
         }
       }
     }
@@ -99,10 +80,6 @@
       font-weight: 400;
       margin: 0 0 89px;
     }
-
-    &--text {
-      padding: 123px 0 24px;
-    }
   }
 
   @include media-breakpoint-up(xxl) {
@@ -117,7 +94,7 @@
     .logos-list {
       ul {
         justify-content: center;
-        margin: 0 -3.8vw;
+        margin: 0;
 
         li {
           padding: 0 3.8vw;
