--- a/src/scss/sections/_block-cases-slider.scss
+++ b/src/scss/sections/_block-cases-slider.scss
@@ -24,13 +24,9 @@
         opacity: 0.5;
         transition: all 0.3s;
 
-        &:hover {
+        &.active {
           color: $primary;
           opacity: 1;
-        }
-
-        a {
-          text-decoration: none;
         }
       }
     }
