--- a/src/scss/sections/_block-outcome.scss
+++ b/src/scss/sections/_block-outcome.scss
@@ -140,6 +140,8 @@
 
         .text {
           padding: 18.5% 0 15% 17.2%;
+          position: relative;
+          z-index: 2;
         }
 
         h4 {
@@ -147,7 +149,9 @@
         }
 
         p {
-          margin: 0 -30px 26px 0;
+          margin: 0 -50px 26px 0;
+          letter-spacing: 0;
+          max-width: none !important;
         }
 
         .icon {
@@ -183,6 +187,7 @@
 
         p {
           margin-right: 0;
+          max-width: 504px !important;
         }
 
         .icon {
