--- a/src/scss/sections/_block-testimonials-slider.scss
+++ b/src/scss/sections/_block-testimonials-slider.scss
@@ -8,12 +8,12 @@
       margin: 0;
 
       &:before {
-        content: "“";
+        content: "";
         display: block;
-        font-size: 150px;
-        letter-spacing: 0.01em;
-        line-height: 1;
-        margin: 0 0 -45px -0.057em;
+        width: 48px;
+        height: 37px;
+        background: url(../images/quote.svg) 0 0 / cover no-repeat;
+        margin: 20px 0 48px;
       }
 
       p {
@@ -21,6 +21,62 @@
         line-height: 1.12;
         letter-spacing: 0.01em;
         margin: 0;
+
+        .line {
+          overflow: hidden;
+
+          &:nth-child(1) {
+            .word {
+              transition-delay: 0.1s;
+            }
+          }
+          &:nth-child(2) {
+            .word {
+              transition-delay: 0.2s;
+            }
+          }
+          &:nth-child(3) {
+            .word {
+              transition-delay: 0.3s;
+            }
+          }
+          &:nth-child(4) {
+            .word {
+              transition-delay: 0.4s;
+            }
+          }
+          &:nth-child(5) {
+            .word {
+              transition-delay: 0.5s;
+            }
+          }
+          &:nth-child(6) {
+            .word {
+              transition-delay: 0.6s;
+            }
+          }
+          &:nth-child(7) {
+            .word {
+              transition-delay: 0.7s;
+            }
+          }
+          &:nth-child(8) {
+            .word {
+              transition-delay: 0.8s;
+            }
+          }
+          &:nth-child(9) {
+            .word {
+              transition-delay: 0.9s;
+            }
+          }
+        }
+
+        .word {
+          transform: translateY(100%);
+          opacity: 0;
+          transition: all 0.5s;
+        }
       }
     }
 
@@ -41,6 +97,19 @@
         letter-spacing: 0;
         font-weight: 700;
         margin: 0 0 5px;
+      }
+    }
+  }
+
+  .swiper-slide-active {
+    .item {
+      .blockquote {
+        p {
+          .word {
+            transform: translateY(0);
+            opacity: 1;
+          }
+        }
       }
     }
   }
@@ -79,7 +148,7 @@
   }
 
   @include media-breakpoint-up(xl) {
-    padding: 58px 0 63px;
+    padding: 55px 0 63px;
 
     .container-fluid {
       max-width: 1920px;
@@ -99,21 +168,23 @@
 
         &:before {
           position: absolute;
-          left: -70px;
-          top: -4px;
+          left: -63px;
+          top: 9px;
           margin: 0;
-          font-size: 128px;
+          width: 43px;
+          height: 34px;
         }
 
         p {
           font-size: 36px;
           line-height: 1.3;
+          letter-spacing: 0;
         }
       }
 
       .blockquote-footer {
         font-size: 14px;
-        padding: 46px 0 0;
+        padding: 48px 0 0;
       }
     }
 
@@ -127,17 +198,19 @@
   }
 
   @include media-breakpoint-up(xxl) {
-    padding: 120px 0 64px;
+    padding: 116px 0 64px;
 
     .item {
-      padding: 0 75px;
+      padding: 0 65px 0 75px;
 
       .blockquote {
         &:before {
-          left: -128px;
-          top: -14px;
+          left: -113px;
+          top: 8px;
           margin: 0;
-          font-size: 257px;
+          width: 50px;
+          height: 50px;
+          background-image: url(../images/quote-xl.svg);
         }
 
         p {
@@ -147,7 +220,7 @@
 
       .blockquote-footer {
         font-size: 18px;
-        padding: 42px 0 0;
+        padding: 45px 0 0;
       }
     }
 
