--- a/src/scss/sections/_page-header-case.scss
+++ b/src/scss/sections/_page-header-case.scss
@@ -51,6 +51,7 @@
       color: $primary;
       text-decoration: none;
       font-weight: 500;
+      white-space: nowrap;
 
       &:after {
         content: "";
@@ -61,6 +62,10 @@
         display: block;
         margin: 0 0 0 20px;
       }
+    }
+
+    .video-controls {
+      display: none;
     }
   }
 
@@ -100,6 +105,10 @@
         font-size: 9.125rem;
         line-height: 0.9;
       }
+    }
+
+    .video-controls {
+      margin: 0 0 -8px;
     }
   }
 
