--- a/src/scss/sections/_block-home-1.scss
+++ b/src/scss/sections/_block-home-1.scss
@@ -1,3 +1,15 @@
+.global-wrapper-home {
+  position: static;
+  overflow: visible;
+
+  .content {
+    position: static;
+  }
+  .footer {
+    z-index: -1;
+  }
+}
+
 .block-home {
   height: 100vh;
 
@@ -6,11 +18,14 @@
     z-index: 9;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
+    width: 100%;
+    overflow: hidden;
   }
 }
 
 .block-home-1 {
-  background-color: $secondary;
+  // background-color: $secondary;
   color: $primary;
   text-align: center;
   position: relative;
@@ -22,12 +37,14 @@
     justify-content: center;
     position: relative;
     z-index: 9;
+    padding: 28vh 0 0;
   }
 
   .headline-main {
     font-size: 16.4vw;
     white-space: nowrap;
     text-align: center;
+    margin: 0 0 -0.14em;
 
     .char {
       display: block;
@@ -43,6 +60,7 @@
     p {
       margin: 0;
       transform: translateY(100%);
+      font-weight: 350;
     }
   }
 
@@ -51,7 +69,8 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 200%;
+    overflow: hidden;
 
     .parallax-item {
       position: absolute;
@@ -141,8 +160,6 @@
       }
       &.layer-3 {
         .parallax-item {
-          width: 0;
-          height: 0;
           &.parallax-item-1 {
             width: 8vw;
             height: 8vw;
@@ -168,26 +185,41 @@
             opacity: 0.5;
           }
           &.parallax-item-4 {
-            top: 25%;
-            left: 45%;
+            top: 20%;
+            left: 60%;
+            width: 7vw;
+            height: 10vw;
+            opacity: 0.5;
           }
           &.parallax-item-5 {
-            top: 95%;
-            left: 40%;
+            top: 90%;
+            left: 70%;
+            width: 7vw;
+            height: 10vw;
+            opacity: 0.5;
           }
           &.parallax-item-6 {
-            top: 4%;
-            right: 10%;
+            top: 30%;
+            right: 2%;
+            width: 7vw;
+            height: 10vw;
+            opacity: 0.5;
           }
           &.parallax-item-7 {
             top: 50%;
-            right: 0%;
+            left: 3%;
+            width: 7vw;
+            height: 10vw;
+            opacity: 0.5;
           }
         }
       }
       &.layer-4 {
+        position: relative;
         overflow: hidden;
         z-index: 11;
+        width: 100vw;
+        height: 100vh;
 
         .video {
           @include abs-center;
@@ -226,6 +258,77 @@
     .text {
       font-size: 32px;
       margin: -10px 0 9.35vh;
+    }
+  }
+
+  @include media-breakpoint-down(lg) {
+    .home-parallax {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 200%;
+      overflow: hidden;
+
+      .parallax-item {
+        position: absolute;
+        transform: translateY(70vh);
+
+        img,
+        video {
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      .layer {
+        &.layer-1 {
+          .parallax-item {
+            width: 10vw;
+            height: 10vw;
+          }
+        }
+        &.layer-2 {
+          .parallax-item {
+            width: 8vw;
+            height: 14vw;
+          }
+        }
+        &.layer-3 {
+          .parallax-item {
+            &.parallax-item-1 {
+              width: 16vw;
+              height: 16vw;
+            }
+            &.parallax-item-2 {
+              width: 16vw;
+              height: 20vw;
+            }
+            &.parallax-item-3 {
+              width: 14vw;
+              height: 20vw;
+            }
+            &.parallax-item-4 {
+              width: 14vw;
+              height: 20vw;
+            }
+            &.parallax-item-5 {
+              width: 16vw;
+              height: 16vw;
+            }
+            &.parallax-item-6 {
+              width: 16vw;
+              height: 20vw;
+            }
+            &.parallax-item-7 {
+              width: 16vw;
+              height: 16vw;
+            }
+          }
+        }
+      }
     }
   }
 }
