--- a/src/scss/components/_blockquote.scss
+++ b/src/scss/components/_blockquote.scss
@@ -30,6 +30,7 @@
         letter-spacing: -0.14px;
         display: block;
         margin: 0 0 5px;
+        font-weight: 700;
       }
     }
   }
