--- a/src/scss/components/_podcast.scss
+++ b/src/scss/components/_podcast.scss
@@ -21,6 +21,13 @@
     width: 53%;
     max-width: 160px;
     flex-shrink: 0;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   .podcast-main {
