--- a/src/scss/sections/_block-home-2.scss
+++ b/src/scss/sections/_block-home-2.scss
@@ -1,257 +1,9 @@
 .block-home-2 {
-  background-color: $secondary;
-  color: $primary;
-  text-align: center;
-  height: 700vh;
-  display: flex;
-  align-items: flex-start;
+  height: 300vh;
+  position: relative;
 
-  &:after {
-    content: "";
-    width: 1px;
-    height: 500vh;
-  }
-
-  .block-inner {
-    height: 100vh;
-    position: sticky;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .wrapper {
-    width: 100%;
-    padding: 0 0 5vh;
-  }
-
-  .text1,
-  .text2,
-  .text3 {
-    position: relative;
-    font-size: 18vw;
-    height: 0.75em;
-
-    .text-line {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-    }
-  }
-
-  .text2 {
-    mix-blend-mode: color;
-    z-index: 2;
-  }
-  .text3 {
-    z-index: 2;
-    height: 0;
-  }
-
-  .text-line {
-    line-height: 1;
-    text-transform: uppercase;
-    letter-spacing: -0.04em;
-    overflow: hidden;
-    text-align: center;
-    white-space: nowrap;
-    font-weight: 300;
-
-    .char {
-      transform: translateY(120%);
-    }
-  }
-
-  .video-block {
-    width: 14.3vw;
-    height: 8.6vw;
-    @include abs-center;
-    z-index: 1;
-
-    .video-text {
-      height: 0;
-      overflow: hidden;
-
-      span {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        color: $primary;
-        font-size: 10px;
-        font-weight: 300;
-        text-transform: uppercase;
-        margin: 0 0 15px;
-
-        &:after {
-          content: "";
-          width: 4px;
-          height: 4px;
-          display: block;
-          border-radius: 100%;
-          background-color: $primary;
-        }
-      }
-
-      p {
-        margin: 0 0 5px;
-        color: #606063;
-        font-size: 20px;
-        line-height: 1.2;
-        font-weight: 350;
-        text-align: left;
-      }
-    }
-
-    .video-wrapper {
-      width: 14.3vw;
-      height: 8.6vw;
-      position: relative;
-    }
-  }
-
-  .video {
-    @include abs-center;
-    width: 100%;
-    height: 100%;
-
-    .video-inner {
-      transform-origin: center;
-      border-radius: 5px;
-      overflow: hidden;
-      transform: translateY(150%);
-      width: 100%;
-      height: 100%;
-      aspect-ratio: 9/16;
-    }
-
-    video {
-      transform-origin: center;
-      width: 200%;
-      height: 200%;
-      object-fit: cover;
-      position: absolute;
-      left: -50%;
-      top: -50%;
-    }
-  }
-
-  .boxes {
-    @include abs-center;
-    width: 240px;
-    height: 450px;
-    opacity: 0;
-
-    .box {
-      position: absolute;
-
-      &.box1 {
-        width: 54%;
-        height: 17.7%;
-        left: 0%;
-        top: -26%;
-      }
-      &.box2 {
-        width: 43.33%;
-        height: 22.8%;
-        left: -57%;
-        top: -12%;
-      }
-      &.box3 {
-        width: 38%;
-        height: 15.1%;
-        left: -72%;
-        top: 22%;
-      }
-      &.box4 {
-        width: 40.4%;
-        height: 38.4%;
-        left: -123%;
-        top: 32%;
-      }
-      &.box5 {
-        width: 56.25%;
-        height: 45.1%;
-        left: -72%;
-        top: 45%;
-      }
-      &.box6 {
-        width: 62.5%;
-        height: 33.3%;
-        left: -118%;
-        top: 95%;
-      }
-      &.box7 {
-        width: 39.5%;
-        height: 31.1%;
-        left: 0%;
-        top: 108%;
-      }
-      &.box8 {
-        width: 70.8%;
-        height: 22.8%;
-        left: 59%;
-        top: 108%;
-      }
-      &.box9 {
-        width: 66.6%;
-        height: 35.5%;
-        left: 117%;
-        top: 4%;
-      }
-      &.box10 {
-        width: 47.9%;
-        height: 37.7%;
-        left: 117%;
-        top: 48%;
-      }
-
-      &.box11 {
-        width: 49.1%;
-        height: 46.8%;
-        left: 180%;
-        top: 48%;
-      }
-
-      img,
-      video {
-        display: block;
-        width: 100%;
-        height: 100%;
-        border-radius: 5px;
-        object-fit: cover;
-        object-position: center;
-      }
-    }
-  }
-
-  @include media-breakpoint-down(lg) {
-    .video-block {
-      width: 200px;
-      height: 130px;
-
-      .video-text {
-        p {
-          font-size: 18px;
-        }
-      }
-
-      .video-wrapper {
-        width: 200px;
-        height: 130px;
-        position: relative;
-      }
-    }
-
-    .text1,
-    .text2,
-    .text3 {
-      font-size: 150px;
-      height: 0.9em;
-    }
-    .text3 {
-      height: 0;
-    }
+  video {
+    min-width: 100% !important;
+    min-height: 100% !important;
   }
 }
