--- a/wsc_upro/style.css
+++ b/wsc_upro/style.css
@@ -2,6 +2,31 @@
 Theme Name: WSC Sports
 */
 
+.lds-dual-ring {
+  display: none;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #e5ff00 transparent #e5ff00 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media (min-width: 1024px){
 	.navigation-main ul li.current-menu-item a {
 		opacity: 1;
